# OpenLogi

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  devenv.nix
.cargo/: config.toml
.claude/rules/: gui.md  hidpp.md  hook.md  i18n.md  ipc-protocol.md  xtask.md
.github/: FUNDING.yml
.github/workflows/: build-fix.yml  build.yml  ci.yml  release.yml
crates/openlogi-agent/: Cargo.toml  build.rs
crates/openlogi-agent-core/: Cargo.toml
crates/openlogi-agent-core/src/: bindings.rs  device_order.rs  event_monitor.rs  hardware.rs  hook_runtime.rs  ipc.rs  lib.rs  orchestrator.rs
crates/openlogi-agent-core/src/watchers/: inventory.rs
crates/openlogi-agent-core/tests/: wire_format.rs
crates/openlogi-agent/src/: launch_agent.rs  main.rs  pairing.rs  self_restart.rs  server.rs  tray_windows.rs
crates/openlogi-assets/: Cargo.toml
crates/openlogi-assets/src/: error.rs  http.rs  index.rs  lib.rs  manifest.rs  metadata.rs  source.rs
crates/openlogi-cli/: Cargo.toml
crates/openlogi-cli/src/: lib.rs
crates/openlogi-cli/src/cmd/: diag.rs  list.rs  mod.rs
crates/openlogi-core/: Cargo.toml
crates/openlogi-core/src/: binding.rs  color.rs  config.rs  device.rs  diagnostics.rs  lib.rs  paths.rs  single_instance.rs
crates/openlogi-core/src/binding/: swipe.rs
crates/openlogi-core/src/config/: device.rs  settings.rs
crates/openlogi-gui/: Cargo.toml  build.rs
crates/openlogi-gui/bundle/agent-dev/: Info.plist
crates/openlogi-gui/bundle/agent-release/: Info.plist
crates/openlogi-gui/dev/: Info.plist
crates/openlogi-gui/locales/: app.yml  da.yml  de.yml  el.yml  en.yml  es.yml  fi.yml  fr.yml  it.yml  ja.yml  ko.yml  nb.yml  nl.yml  pl.yml  pt-BR.yml  pt-PT.yml  ru.yml  sv.yml  zh-CN.yml  zh-HK.yml  zh-TW.yml
crates/openlogi-gui/src/: app.rs  app_assets.rs  app_menu.rs  asset.rs  i18n.rs  ipc_client.rs  main.rs  state.rs  theme.rs  windows.rs
crates/openlogi-hid/: Cargo.toml
crates/openlogi-hid/src/: gesture.rs  hires_wheel.rs  hotplug.rs  inventory.rs  lib.rs  mappings.rs  pairing.rs  reprog_controls.rs  route.rs  transport.rs  windows_hid.rs  write.rs
crates/openlogi-hidpp/: Cargo.toml
crates/openlogi-hidpp/src/: channel.rs  device.rs
crates/openlogi-hook/: Cargo.toml
crates/openlogi-hook/examples/: list_taps.rs  print_events.rs
crates/openlogi-hook/src/: lib.rs  linux.rs  macos.rs  tests.rs  windows.rs
crates/openlogi-inject/: Cargo.toml
crates/openlogi-inject/src/: inject.rs
docs/: CONFIGURATION.md  DECISIONS.md  DEVELOPMENT.md  README.de.md  README.fr.md  README.ja.md  README.ko.md  README.zh-CN.md  USAGE.md
nix/: package.nix
packaging/linux/: install.sh  nfpm.yaml
packaging/linux/nfpm-scripts/: postinstall.sh
packaging/linux/systemd/: openlogi-agent.service
packaging/windows/: OpenLogi.wxs
scripts/: cargo-run-macos.sh
xtask/: Cargo.toml  README.md
xtask/src/: macos.rs  main.rs  manifest.rs  util.rs
xtask/src/commands/: linux.rs  macos.rs  mod.rs  release.rs
(+114 files in other folders)
