[package]
name = "openlogi-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "OpenLogi background agent — headless, always-on owner of the input hook, HID++ device I/O, and (later) the menu-bar tray."
# Distributed as a login-item helper inside the bundled .app; never published.
publish = false

[[bin]]
name = "openlogi-agent"
path = "src/main.rs"

[dependencies]
openlogi-agent-core = { path = "../openlogi-agent-core" }
openlogi-core = { path = "../openlogi-core" }
openlogi-hid = { path = "../openlogi-hid" }
openlogi-hook = { path = "../openlogi-hook" }
tarpc = { workspace = true }
interprocess = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "io-util"] }
futures = "0.3"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sysinfo = { version = "0.38.4", default-features = false, features = ["system"] }
opener = { workspace = true }

# Menu-bar status item (NSStatusItem) — the agent hosts the tray now. objc2
# gives Retained<T>-owned AppKit bindings (no #99-style leaks); versions match
# the GUI's so the resolve doesn't move the gpui Cargo.lock pin.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { workspace = true }
objc2-app-kit = { workspace = true, features = ["NSStatusBar", "NSStatusItem", "NSStatusBarButton", "NSButton", "NSControl", "NSResponder", "NSView", "NSMenu", "NSMenuItem", "NSImage", "NSApplication", "NSRunningApplication"] }
objc2-foundation = { workspace = true, features = ["NSString", "NSData", "NSArray"] }
plist = "1.9.0"

# Autostart via the HKCU Run key (launch_agent.rs); winreg also answers the
# taskbar light/dark theme read for the tray glyph (tray_windows.rs). The
# notification-area icon itself is raw win32 via the workspace windows-sys.
[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[lints]
workspace = true
